--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,15 @@
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
+<script>
+    setTimeout(() => {
+        if (!/^http:\/\/(a\.kylebing\.cn|localhost|192\.168\.\d{1,3}\.\d{1,3})/i.test(location.href)) {
+            let hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?2dee8707be9dccea8e521a1d46154b01";
+            let s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        }
+    }, 1000)
+</script>
 </body>
 </html>
