--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="./public/logo_transparent.png" type="image/png">
+    <link rel="stylesheet" href="./public/preloading.css">
     <title>Voila</title>
 </head>
 <body>
@@ -12,21 +13,17 @@
 <!--加载动画-->
 <div class="preloading">
     <div class="logo-preloading">
-        <img src="./public/logo_transparent.png" alt="LOGO">
+        <img src="./public/logo.gif" alt="LOGO">
     </div>
-    <div class="preloading-title">载入中</div>
-    <div class="preloading-loading">
-        <div class="preloading-loading-1 preloading-loading-item"></div>
-        <div class="preloading-loading-2 preloading-loading-item"></div>
-        <div class="preloading-loading-3 preloading-loading-item"></div>
-        <div class="preloading-loading-4 preloading-loading-item"></div>
-    </div>
+<!--    <div class="preloading-title">载入中</div>-->
+<!--    <div class="preloading-loading">-->
+<!--        <div class="preloading-loading-1 preloading-loading-item"></div>-->
+<!--        <div class="preloading-loading-2 preloading-loading-item"></div>-->
+<!--        <div class="preloading-loading-3 preloading-loading-item"></div>-->
+<!--        <div class="preloading-loading-4 preloading-loading-item"></div>-->
+<!--    </div>-->
 </div>
 
-
-<noscript>
-    <strong>请开启JavaScript支持：未开启 JavaScript 支持的情况下，《标题日记》将无法正常工作</strong>
-</noscript>
 <div id="app"></div>
 <script type="module" src="/src/main.ts"></script>
 <script>
